--- a/src/app/task/tasksingle/tasksingle.component.scss
+++ b/src/app/task/tasksingle/tasksingle.component.scss
@@ -335,3 +335,9 @@ ul.steps-indicator.horizontal  li a .label {
   background-color: #ece9e9 !important;
   color: #444;
 }
+.APPROVED {
+  color: green;
+}
+.REJECTED {
+  color: RED;
+}
