--- a/src/app/task/task/task.component.html
+++ b/src/app/task/task/task.component.html
@@ -207,7 +207,7 @@
                     <!-- <td class="text-left"><a routerLink="/task/{{accountId}}/{{item.cId}}" > {{item.poNumber}} </a> </td> -->
                     <td class="hidden-xs"><a routerLink="/task/{{accountId}}/{{item.cId}}" > {{item?.customerName || '-N/A-'}}</a> </td>
                     <td class="hidden-xs"> {{item.deliveryToText || '-N/A-'}} </td>
-                    <td class="hidden-xs"> {{item.amount || '-N/A-'}} </td>
+                    <td class="hidden-xs"> {{(item.amount | currency) || '-N/A-'}} </td>
                     <td class="hidden-xs"> {{item.contractTerms || '-N/A-'}} </td>
                     <td class="color-orange"> {{item.status}} </td>
                   </tr>
